--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     </div>
 
     <!-- Mobile menu -->
-    <div id="mobile-menu" class="mobile-menu fixed inset-y-0 right-0 w-72 bg-dark-800/95 backdrop-blur-xl z-50 md:hidden">
+    <div id="mobile-menu" class="mobile-menu fixed inset-y-0 right-0 w-72 bg-dark-900 border-l border-orv-500/20 backdrop-blur-xl z-50 md:hidden">
       <div class="flex flex-col p-8 pt-24 gap-6">
         <a href="#inicio" class="text-lg font-medium text-gray-300 hover:text-white transition-colors mobile-link">Inicio</a>
         <a href="#nosotros" class="text-lg font-medium text-gray-300 hover:text-white transition-colors mobile-link">Nosotros</a>
@@ -431,16 +431,6 @@
           <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
           Descubre más
         </a>
-      </div>
-    </div>
-
-    <!-- Scroll indicator -->
-    <div class="absolute bottom-8 left-1/2 -translate-x-1/2 z-10 animate-fade-in" style="animation-delay: 1.2s; opacity: 0;">
-      <div class="flex flex-col items-center gap-2 text-gray-500">
-        <span class="text-xs tracking-widest uppercase">Scroll</span>
-        <div class="w-6 h-10 rounded-full border-2 border-gray-600 flex justify-center pt-2">
-          <div class="w-1.5 h-1.5 rounded-full bg-orv-400 animate-bounce"></div>
-        </div>
       </div>
     </div>
   </section>
@@ -800,7 +790,7 @@
           <div class="relative w-full max-w-md mx-auto aspect-square">
             <!-- Central orb -->
             <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-32 h-32 rounded-full bg-gradient-to-br from-orv-500 to-orv-700 flex items-center justify-center z-10 animate-pulse-glow" style="animation: pulseGlow 3s ease-in-out infinite;">
-              <span class="font-display font-bold text-2xl text-white">O</span>
+              <span class="font-display font-bold text-2xl text-white">Orvatia</span>
             </div>
 
             <!-- Orbit rings -->
