Agregar sección de "Casos de éxito" y actualizar navegación en el menú

--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
           <a href="#servicios" class="nav-link text-sm font-medium text-gray-300 hover:text-white transition-colors">Servicios</a>
           <a href="#valores" class="nav-link text-sm font-medium text-gray-300 hover:text-white transition-colors">Valores</a>
           <a href="#ecosistema" class="nav-link text-sm font-medium text-gray-300 hover:text-white transition-colors">Ecosistema</a>
+          <a href="#casos-exito" class="nav-link text-sm font-medium text-gray-300 hover:text-white transition-colors">Casos de éxito</a>
           <a href="#contacto" class="px-6 py-2.5 bg-orv-600 hover:bg-orv-500 text-white text-sm font-semibold rounded-full transition-all duration-300 hover:shadow-lg hover:shadow-orv-500/30">
             Contáctanos
           </a>
@@ -412,6 +413,7 @@
         <a href="#servicios" class="text-lg font-medium text-gray-300 hover:text-orv-400 transition-colors mobile-link py-2">Servicios</a>
         <a href="#valores" class="text-lg font-medium text-gray-300 hover:text-orv-400 transition-colors mobile-link py-2">Valores</a>
         <a href="#ecosistema" class="text-lg font-medium text-gray-300 hover:text-orv-400 transition-colors mobile-link py-2">Ecosistema</a>
+        <a href="#casos-exito" class="text-lg font-medium text-gray-300 hover:text-orv-400 transition-colors mobile-link py-2">Casos de éxito</a>
         <hr class="border-orv-500/20 my-2">
         <a href="#contacto" class="mt-2 px-6 py-3 bg-gradient-to-r from-orv-600 to-orv-500 hover:from-orv-500 hover:to-orv-400 text-white text-center font-semibold rounded-full transition-all shadow-lg shadow-orv-500/30 mobile-link">
           Contáctanos
@@ -801,7 +803,7 @@
             <svg class="w-7 h-7 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"/></svg>
           </div>
           <h4 class="font-display font-bold text-white mb-2">Calidad</h4>
-          <p class="text-gray-500 text-sm leading-relaxed">Entregamos soluciones sólidas y escalables.</p>
+          <p class="text-gray-500 text-sm leading-relaxed">Entregamos soluciones sólidas.</p>
         </div>
 
         <!-- Value 5 -->
@@ -810,7 +812,7 @@
             <svg class="w-7 h-7 text-orv-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"/></svg>
           </div>
           <h4 class="font-display font-bold text-white mb-2">Resultados</h4>
-          <p class="text-gray-500 text-sm leading-relaxed">La tecnología debe generar crecimiento real.</p>
+          <p class="text-gray-500 text-sm leading-relaxed">Demostramos como la solución dará resultado.</p>
         </div>
       </div>
     </div>
@@ -919,6 +921,167 @@
 
   <div class="section-divider max-w-4xl mx-auto"></div>
 
+  <!-- ==================== CASOS DE ÉXITO / TESTIMONIOS ==================== -->
+  <section id="casos-exito" class="relative py-32 overflow-hidden">
+    <div class="absolute top-1/4 right-0 w-[400px] h-[400px] bg-orv-600/5 rounded-full blur-[120px]"></div>
+    <div class="absolute bottom-1/4 left-0 w-[300px] h-[300px] bg-violet-600/5 rounded-full blur-[120px]"></div>
+
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <!-- Header -->
+      <div class="text-center mb-20">
+        <div class="reveal">
+          <span class="text-orv-400 font-medium text-sm tracking-widest uppercase">Casos de éxito</span>
+          <h2 class="font-display text-4xl sm:text-5xl font-bold mt-4 mb-6">
+            Empresas que crecieron<br>con nuestro <span class="gradient-text">ecosistema</span>
+          </h2>
+          <p class="text-lg text-gray-300 max-w-2xl mx-auto">
+            Transformamos visiones en realidad. Conoce cómo empresas de diferentes sectores lograron su transformación digital con Orbecore.
+          </p>
+        </div>
+      </div>
+
+      <!-- Case Studies Grid -->
+      <div class="grid md:grid-cols-3 gap-8">
+        <!-- SENA Case -->
+        <div class="reveal-left group glass-light rounded-2xl p-8 hover:border-orv-500/50 transition-all duration-300 hover:shadow-xl hover:shadow-orv-500/10">
+          <!-- Logo/Icon Area -->
+          <div class="w-14 h-14 rounded-xl bg-gradient-to-br from-amber-500/20 to-amber-500/5 flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+            <img src="https://www.sena.edu.co/Style%20Library/alayout/images/logoSena.png" alt="SENA" class="w-10 h-10 object-contain">
+          </div>
+
+          <h3 class="font-display text-2xl font-bold text-white mb-2">SENA Regional Nariño</h3>
+          <p class="text-orv-400 font-medium text-sm mb-4">Transformación Digital Agrícola</p>
+
+          <p class="text-gray-300 text-sm leading-relaxed mb-6">
+            Entidad pública que brinda formación profesional para impulsar el desarrollo social, tecnológico y productivo.
+          </p>
+
+          <div class="space-y-4 mb-6 pb-6 border-b border-white/5">
+            <div>
+              <h4 class="text-white font-semibold text-sm mb-2">INVENSOFT</h4>
+              <p class="text-gray-400 text-sm">
+                Sistema integral que revolucionó la gestión de la Comercializadora Centro Lope. El software reemplazó un sistema antiguo de más de 12 años, agilizando significativamente:
+              </p>
+              <ul class="text-gray-400 text-sm mt-2 space-y-1 ml-4">
+                <li>✓ Gestión de inventarios con identificación por placas individuales</li>
+                <li>✓ Procesos de ventas optimizados y trazabilidad completa</li>
+                <li>✓ Perfiles individuales para cada empleado</li>
+                <li>✓ Búsqueda rápida de información (antes tomaba mucho tiempo)</li>
+              </ul>
+            </div>
+            <p class="text-gray-400 text-sm italic border-t border-white/5 pt-3 mt-3">
+              <strong>"Antes, el software era muy lento y nos tomaba mucho tiempo en la búsqueda de información. Con el nuevo sistema, es más eficaz y podemos dedicar más tiempo a la salud y bienestar de los animales."</strong> - Diana Cañizares, Médica Veterinaria
+            </p>
+          </div>
+
+          <div class="flex items-center gap-2 text-orv-400 text-sm font-medium">
+            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/></svg>
+            Software agrícola inteligente
+          </div>
+        </div>
+
+        <!-- Bee Languages Academy Case -->
+        <div class="reveal group glass-light rounded-2xl p-8 hover:border-violet-500/50 transition-all duration-300 hover:shadow-xl hover:shadow-violet-500/10">
+          <!-- Logo/Icon Area -->
+          <div class="w-14 h-14 rounded-xl bg-gradient-to-br from-violet-500/20 to-violet-500/5 flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+            <img src="https://mybeeweb.com/assets/img/logo.png" alt="Bee Languages Academy" class="w-10 h-10 object-contain">
+          </div>
+
+          <h3 class="font-display text-2xl font-bold text-white mb-2">Bee Languages Academy</h3>
+          <p class="text-violet-400 font-medium text-sm mb-4">Plataforma de Educación en Inglés</p>
+
+          <p class="text-gray-300 text-sm leading-relaxed mb-6">
+            Academia de inglés conversacional que transforma vidas siendo bilingüe. Atiende a 500+ estudiantes con más de 98% de satisfacción, combinando educación con tecnología de forma humana y personalizada.
+          </p>
+
+          <div class="space-y-4 mb-6 pb-6 border-b border-white/5">
+            <div>
+              <h4 class="text-white font-semibold text-sm mb-2">MyBeeWeb - Plataforma Integral</h4>
+              <p class="text-gray-400 text-sm mb-2">
+                Sistema completo de gestión y aprendizaje que ofrece:
+              </p>
+              <ul class="text-gray-400 text-sm space-y-1 ml-4">
+                <li>✓ Modalidades flexibles: presenciales, virtuales e híbridas</li>
+                <li>✓ Acceso 24/7 al software de aprendizaje</li>
+                <li>✓ Gestión interna y sistema de tiqueteras</li>
+                <li>✓ Control de horas y seguimiento personalizado</li>
+                <li>✓ Coaches certificados, bilingües y con experiencia internacional</li>
+              </ul>
+            </div>
+            <p class="text-gray-400 text-sm italic border-t border-white/5 pt-3 mt-3">
+              <strong>"Para mí ha sido un plus increíble a mi negocio que me permite cerrar ventas generando credibilidad y confianza. Es una plataforma humana, personalizada y con la capacidad de entender las necesidades específicas de un negocio auténtico."</strong> - Valentina Fajardo, Dueña
+            </p>
+          </div>
+
+          <div class="flex items-center gap-2 text-violet-400 text-sm font-medium">
+            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/></svg>
+            Plataforma educativa SaaS
+          </div>
+        </div>
+
+        <!-- CLEAN USA Case -->
+        <div class="reveal-right group glass-light rounded-2xl p-8 hover:border-emerald-500/50 transition-all duration-300 hover:shadow-xl hover:shadow-emerald-500/10">
+          <!-- Logo/Icon Area -->
+          <div class="w-14 h-14 rounded-xl bg-gradient-to-br from-emerald-500/20 to-emerald-500/5 flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+            <svg viewBox="0 0 768 364" preserveAspectRatio="xMidYMid meet" class="w-10 h-10" xmlns="http://www.w3.org/2000/svg"><g><path fill="#4ADE80" d="m135.5 59.625 2.004.002C155.79 59.696 179.73 63.175 194 76c0 4.57-1.43 7.27-3.5 11.188q-1.096 2.13-2.187 4.261l-1.149 2.24c-1.965 3.9-3.815 7.854-5.664 11.811l-1.06 2.266q-1.222 2.616-2.44 5.234c-3.308-.56-5.406-1.214-8.437-2.812-15.413-7.72-35.276-9.28-51.938-4.626-6.71 2.567-14.215 6.02-19.336 11.153C97 118 97 118 95 118v2h-2l-.82 1.719c-1.223 2.364-2.615 4.543-4.055 6.781-7.614 12.895-9.897 27.926-6.242 42.613C84.355 178.603 87.963 184.95 93 191l1.77 2.145c11.096 12.217 26.703 16.006 42.62 16.855 11.924 0 24.342-2.08 34.673-8.312L175 200c3 1 3 1 4.727 3.93q.964 1.965 1.898 3.945l1.027 2.115A975 975 0 0 1 186 217l2.523 5.29c2.173 4.563 4.329 9.135 6.477 13.71-22.838 15.86-51.54 21.276-78.974 16.396-9.863-1.928-19.056-4.79-28.026-9.396l-2.805-1.406C78.91 238.32 73.403 234.576 68 230l-2.465-2.059c-19.718-17.044-31.157-39.996-33.406-65.933L32 160l-.16-1.945C30.817 134.67 41.957 112.822 56 95l2.148-2.852L60 90h2v-2a123 123 0 0 1 6.375-5.25l1.94-1.502c19.023-14.535 41.347-21.656 65.185-21.623"/></g></svg>
+          </div>
+
+          <h3 class="font-display text-2xl font-bold text-white mb-2">CLEAN USA</h3>
+          <p class="text-emerald-400 font-medium text-sm mb-4">Servicios Premium de Limpieza</p>
+
+          <p class="text-gray-300 text-sm leading-relaxed mb-6">
+            Empresa de limpieza premium registrada e asegurada que ofrece servicios profesionales, eco-friendly y pet-friendly en Western New York con horarios flexible y atención personalizada.
+          </p>
+
+          <div class="space-y-4 mb-6 pb-6 border-b border-white/5">
+            <div>
+              <h4 class="text-white font-semibold text-sm mb-2">Servicios y Características</h4>
+              <p class="text-gray-400 text-sm mb-2">
+                Soluciones de limpieza completas y personalizadas:
+              </p>
+              <ul class="text-gray-400 text-sm space-y-1 ml-4">
+                <li>✓ Limpieza residencial y comercial</li>
+                <li>✓ Post-construcción y limpieza para administradores de edificios</li>
+                <li>✓ Organización profesional</li>
+                <li>✓ Productos eco-friendly y pet-friendly</li>
+                <li>✓ Equipo entrenado en estándares de excelencia</li>
+              </ul>
+            </div>
+            <p class="text-gray-400 text-sm italic border-t border-white/5 pt-3 mt-3">
+              <strong>"Absolutely thrilled with CLEAN. With two young kids, keeping the house spotless felt impossible. The team arrived on time, super organized, and left everything perfect. The difference between a quick clean and truly professional service is very noticeable."</strong> - Charlotte Smith
+            </p>
+            <div class="text-gray-400 text-sm">
+              <p><strong>Ubicación:</strong> Erie County – Buffalo, NY, USA</p>
+            </div>
+          </div>
+
+          <div class="flex items-center gap-2 text-emerald-400 text-sm font-medium">
+            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/></svg>
+            Presencia Digital Premium
+          </div>
+        </div>
+      </div>
+
+      <!-- Stats -->
+      <div class="reveal mt-20 grid grid-cols-3 gap-8 pt-12 border-t border-white/5">
+        <div class="text-center">
+          <div class="font-display text-4xl font-bold text-orv-400 mb-2">3+</div>
+          <p class="text-gray-400 text-sm">Casos de éxito transformados</p>
+        </div>
+        <div class="text-center">
+          <div class="font-display text-4xl font-bold text-violet-400 mb-2">500+</div>
+          <p class="text-gray-400 text-sm">Usuarios impactados</p>
+        </div>
+        <div class="text-center">
+          <div class="font-display text-4xl font-bold text-emerald-400 mb-2">100%</div>
+          <p class="text-gray-400 text-sm">Satisfacción garantizada</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="section-divider max-w-4xl mx-auto"></div>
+
   <!-- ==================== CTA SECTION ==================== -->
   <section id="contacto" class="relative py-32 overflow-hidden">
     <!-- Background shader-like gradient -->
@@ -995,6 +1158,7 @@
             <li><a href="#servicios" class="text-gray-500 hover:text-orv-400 transition-colors text-sm">Servicios</a></li>
             <li><a href="#valores" class="text-gray-500 hover:text-orv-400 transition-colors text-sm">Valores</a></li>
             <li><a href="#ecosistema" class="text-gray-500 hover:text-orv-400 transition-colors text-sm">Ecosistema</a></li>
+            <li><a href="#casos-exito" class="text-gray-500 hover:text-orv-400 transition-colors text-sm">Casos de éxito</a></li>
           </ul>
         </div>
 
